src/css/widget/_share.scss
// Share
.share {
  @extend %indistinguishable-link;

  ul {
    display: flex;
    font-size: rem($ratio-text-small);
    margin-top: $margin-large;
  }

  li {
    display: block;
    margin-right: $margin-tiny;
  }

  .twitter {
    color: rgb(85, 172, 238);
  }

  .facebook {
    color: rgb(59, 89, 153);
  }

  .hatena {
    color: rgb(0, 164, 222);
  }
}

